--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@ https://templatemo.com/tm-578-first-portfolio
                         </div>
 
                         <div class="col-lg-2 col-4 clients-item-height">
-                            <img src="images/clients/NET.png" class="clients-image img-fluid" alt="">
+                            <img src="images/clients/net.png" class="clients-image img-fluid" alt="">
                         </div>
 
                         <div class="col-lg-2 col-4 clients-item-height">
