--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ https://templatemo.com/tm-578-first-portfolio
     <body>
         <div id="light">
             <a class="boxclose" id="boxclose" onclick="lightbox_close();"></a>
-            <video id="VisaChipCardVideo" width="600" controls>
+            <video id="VisaChipCardVideo" controls>
                 <source id="vidIdSrc" src="images/projects/Astrit-Muçiqi_JobifyUPDATED.mp4" type="video/mp4">
                 <!--Browser does not support <video> tag -->
               </video>
@@ -166,7 +166,7 @@ https://templatemo.com/tm-578-first-portfolio
             <section class="about section-padding" id="section_2">
                 <div class="container">
                     <div class="row">
-                        <div style="display: flex; flex-direction: column;width: 50%;">
+                        <div id="div2" style="display: flex; flex-direction: column;">
                             <h6 class="pt-2 mb-3">Where big things has happened:</h6>
                             <!-- <div  class="col-lg-14 col-12">
                                 <img src="images/am_ei.jpg" class="about-image img-fluid" alt="">
@@ -174,13 +174,13 @@ https://templatemo.com/tm-578-first-portfolio
 
                             <div  class="slider owl-carousel">
                                 <div class="col-lg-14 col-12">
-                                    <img style="height: 400px" src="images/am_ei.jpg" class="about-image img-fluid imgOWL" alt="">
+                                    <img src="images/am_ei.jpg" class="about-image img-fluid imgOWL" alt="">
                                 </div>
                                 <div class="col-lg-14 col-12">
-                                    <img style="height: 400px;" src="images/slider2.JPG" class="about-image img-fluid imgOWL" alt="">
+                                    <img src="images/slider2.JPG" class="about-image img-fluid imgOWL" alt="">
                                 </div>
                                 <div class="col-lg-14 col-12">
-                                    <img style="height: 400px;" src="images/SLIDER3.jpg" class="about-image img-fluid imgOWL" alt="">
+                                    <img src="images/SLIDER3.jpg" class="about-image img-fluid imgOWL" alt="">
                                 </div>
                             </div>
 
@@ -251,7 +251,7 @@ https://templatemo.com/tm-578-first-portfolio
 
                                     <p>
                                         <span class="profile-small-title">Email</span> 
-                                        <span><a href="mailto:hello@josh.design">astritmuciqi@gmail.com</a></span>
+                                        <span><a href="mailto:astritmuciqi@gmail.com">astritmuciqi@gmail.com</a></span>
                                     </p>
                                 </div>
                             </div>
@@ -343,7 +343,7 @@ https://templatemo.com/tm-578-first-portfolio
                                             <h4 class="mb-0">Management</h4>                                
                                         </div>
 
-                                        <p>I set clear goals, assign tasks, and establish deadlines to development team. I always try to foster the effective communication and provide support to remove obstacles.Also encourage collaboration and teamwork, celebrate achievements, and offer constructive feedback. </p>
+                                        <p class="services_p">I set clear goals, assign tasks, and establish deadlines to development team. I always try to foster the effective communication and provide support to remove obstacles.Also encourage collaboration and teamwork, celebrate achievements, and offer constructive feedback. </p>
                                         <div class="services-icon-wrap d-flex justify-content-center align-items-center">
                                             <i class="services-icon bi-globe"></i>
                                         </div>
@@ -356,7 +356,7 @@ https://templatemo.com/tm-578-first-portfolio
                                             <h4 class="mb-0">Testing and Debugging</h4>
                                         </div>
 
-                                        <p>Testing and debugging goes by interaction through the website and looking for coding faults and irregularities that affect the functionality or security of the site and resolving by analyzing the network requests(API calls), managing state, etc. 
+                                        <p class="services_p">Testing and debugging goes by interaction through the website and looking for coding faults and irregularities that affect the functionality or security of the site and resolving by analyzing the network requests(API calls), managing state, etc. 
                                             This process requires patience and persistence, and is most required for performance of web application </p>
 
                                         <div class="services-icon-wrap d-flex justify-content-center align-items-center">
@@ -371,7 +371,7 @@ https://templatemo.com/tm-578-first-portfolio
                                             <h4 class="mb-0">Fullstack Coding</h4>
                                         </div>
 
-                                        <p>
+                                        <p class="services_p">
 
                                             Fullstack skills involve proficiency in both frontend and backend development. Knowledge of frontend technologies like HTML, CSS, JavaScript, and frameworks (React, Vue) as well as backend technologies like server-side programming languages (.Net, PHP, Node.js), databases (SQL, MySQL, MongoDB), and server frameworks (Express). As a Fullstack Developer I handle end-to-end development tasks, including designing and styling web pages, building server logic, working with databases, creating APIs, and deploying applications. Also have problem-solving abilities, collaboration skills, and an understanding of version control and security.                                        </p>
 
@@ -387,7 +387,7 @@ https://templatemo.com/tm-578-first-portfolio
                                             <h4 class="mb-0">SEO</h4>
                                         </div>
 
-                                        <p>
+                                        <p class="services_p"> 
                                             To rank your website first in every search engine, we will work together. It is necessary to get keywords used by customers, efficient coding to perform quickly, mobile friendly app, etc.
                                         </p>
 
