--- a/index.html
+++ b/index.html
@@ -112,13 +112,16 @@ https://templatemo.com/tm-578-first-portfolio
                         <li class="nav-item">
                             <a class="nav-link click-scroll" href="#section_3">Skills</a>
                         </li>
-
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_4">Projects</a>
+                            <a class="nav-link click-scroll" href="#section_4">Experience</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_5">Contact</a>
+                            <a class="nav-link click-scroll" href="#section_5">Projects</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link click-scroll" href="#section_6">Contact</a>
                         </li>
                     </ul>
 
@@ -401,9 +404,84 @@ https://templatemo.com/tm-578-first-portfolio
                     </div>
                 </div>
             </section>
+ <section class="contact section-padding" id="section_4">
+                <div class="container">
+                    <div class="row">
 
+                        <div class="col-lg-6 col-md-8 col-12">
+                            <div class="section-title-wrap d-flex justify-content-center align-items-center mb-5">
+                                <img src="images/pexels-photo-9752173.jpeg" class="avatar-image img-fluid" alt="">
 
-            <section class="projects section-padding" id="section_4">
+                                <h2 class="text-white ms-4 mb-0">Experince</h2>
+                            </div>
+                        </div>
+                        <div class="clearfix"></div>
+
+                            <div class="content-ex">
+                                <div class="year_span">
+                                    <h4>2019</h4>
+                                    <h4>2022</h4>
+                                </div>
+                                <div style="text-align: justify;" class="p-ex">
+                                    <p>
+                                        During my studies in computer science and engineering at University for Business and Technology - UBT from 2019 to 2022, 
+                                        I gained a comprehensive understanding of programming, algorithms, servers, computer architecture, UI/UX design, and the operating systems.
+
+                                        Here's a concise description of my studies in computer science and engineering at UBT from 2019 to 2022, specialized in web programming, divided into a list:
+
+                                        <ol>
+                                            <li><b> Specialization: </b> Web Programming</li>
+                                            <li><b> Programming Languages: </b> Learned HTML, CSS, JavaScript, and frameworks like React and Angular.</li>
+                                            <li><b> Algorithms:</b> Studied designing and analyzing efficient algorithms for problem-solving.</li>
+                                            <li><b> Servers and Computer Architecture: </b> Explored hardware components, server architectures, network protocols, and distributed systems.</li>
+                                            <li><b> UI/UX Design:</b> Acquired skills in user-centered design principles, information architecture, wireframing, prototyping, and usability testing.</li>
+                                            <li><b> Systems Analysis: </b> Gained knowledge of how computer systems work and different system architectures.</li>
+                                            <li><b> Windows Operating System:</b> Developed a strong understanding of the Windows OS, including its architecture, file systems, process management, and security mechanisms.</li>
+                                            <li><b> Problem-Solving:</b> Developed problem-solving abilities through algorithmic studies and real-world programming challenges.</li>
+                                            <li><b> Web Application Development:</b> Acquired skills in creating dynamic and interactive web applications using the learned programming languages and frameworks.</li>
+                                            <li><b> One Exam Left:</b> On the verge of completing the studies, with one exam remaining in 2023, showcasing dedication and commitment to web programming.</li>
+
+                                        </ol>
+
+                                        In summary, my studies in computer science and engineering with a specialization in web programming covered programming languages, algorithms, 
+                                        servers and computer architecture, UI/UX design, systems analysis, the Windows operating system, problem-solving, and web application development. 
+                                        With one exam left, I am on the verge of completing my studies, demonstrating my dedication and expertise in the field of web programming.
+
+                                    </p>
+
+                                    <p>I joined Primex LLC in October 2022 as a full-stack developer with a strong background in different databases, HTML, CSS, JavaScript, and PHP. 
+                                        This expertise allowed me to effectively work with frameworks like Laravel and Vue.js. Additionally, 
+                                        I possessed skills in server and system administration, enabling me to handle various technical aspects of the development process. <br>
+                                        Primex LLC, is an international company specializing in furniture, an exciting and rewarding experience.                                        
+                                        As a full-stack developer, my role involvs managing and updating real-time data related to furniture production, client orders, 
+                                        and creating different reports for administrative staff in Kosovo, Germany and Poland helping to reach the best level of promoting products online on different shops. 
+                                        
+                                        <ol>
+                                            <li><b> Responsibilities: </b> My primary responsibility was managing and updating real-time data related to furniture production, client orders, and imports across various shops. 
+                                                I utilized my technical skills to streamline data management processes and ensure smooth communication between departments involved in the furniture supply chain.</li>
+                                            <li><b> Impact: </b> Through my knowledge and techniques acquired from previous experiences, I made significant improvements within a short period.
+                                                I implemented efficient systems and workflows, contributing to increased productivity and improved data accuracy.</li>
+                                            <li><b> Promotion: </b> Due to my exceptional performance and the value I added to the company, I was promoted to the position of Team Leader of the development team. 
+                                                This recognition highlighted my ability to deliver high-quality work and demonstrated my leadership potential.</li>
+                                            <li><b> Team Leadership: </b> As a Team Leader, my responsibilities expanded beyond technical tasks. I focused on maximizing the potential of my team members, 
+                                                creating a collaborative work environment, and fostering effective communication and knowledge sharing. I ensured tasks were assigned efficiently, considering individual strengths and skills.</li>
+                                            <li><b> Collaboration: </b> I collaborated with other departments, such as design, marketing, and logistics, to align the development team's goals with the overall company objectives. 
+                                                This collaboration ensured a cohesive approach and timely completion of projects.</li>
+                                            <li>
+                                                <b> Project Management:</b> Leveraging my technical expertise and leadership skills, I successfully managed projects, meeting deadlines and delivering exceptional results. 
+                                                I coordinated efforts between different teams and departments to ensure smooth project execution.</li>
+                                            <li><b> Exposure:</b> Working at Primex LLC provided valuable exposure to the complexities of an international company in the furniture industry. 
+                                                I gained insights into supply chain management, customer relations, and the overall operations of a global business.</li>
+                                        </ol>
+                                    </p>
+                                </div>
+                        </div>   
+                    </div>
+                </div>
+            </div>
+            </section>
+
+            <section class="projects section-padding" id="section_5">
                 <div class="container">
                     <div class="row">
 
@@ -463,7 +541,7 @@ https://templatemo.com/tm-578-first-portfolio
                 </div>
             </section>
 
-            <section class="contact section-padding" id="section_5">
+            <section class="contact section-padding" id="section_6">
                     <div class="container">
                         <div class="row">
 
