--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@ https://templatemo.com/tm-578-first-portfolio
                     </div>
                 </div>
             </section>
- <section class="contact section-padding" id="section_4">
+            <section class="contact section-padding" id="section_4">
                 <div class="container">
                     <div class="row">
 
@@ -412,7 +412,7 @@ https://templatemo.com/tm-578-first-portfolio
                             <div class="section-title-wrap d-flex justify-content-center align-items-center mb-5">
                                 <img src="images/pexels-photo-9752173.jpeg" class="avatar-image img-fluid" alt="">
 
-                                <h2 class="text-white ms-4 mb-0">Experince</h2>
+                                <h2 class="text-white ms-4 mb-0">Experience</h2>
                             </div>
                         </div>
                         <div class="clearfix"></div>
