--- a/index.html
+++ b/index.html
@@ -185,6 +185,12 @@ https://templatemo.com/tm-578-first-portfolio
                                 <div class="col-lg-14 col-12">
                                     <img src="images/SLIDER3.jpg" class="about-image img-fluid imgOWL" alt="">
                                 </div>
+                                <div class="col-lg-14 col-12">
+                                    <img src="images/slider4.jpg" class="about-image img-fluid imgOWL" alt="">
+                                </div>
+                                <div class="col-lg-14 col-12">
+                                    <img src="images/slider5.JPG" class="about-image img-fluid imgOWL" alt="">
+                                </div>
                             </div>
 
                             
