new version, added new experience

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ https://templatemo.com/tm-578-first-portfolio
                         <div class="col-lg-7 col-12">
                             <div class="hero-text">
                                 <div class="hero-title-wrap d-flex align-items-center mb-4">
-                                    <img src="images/photostudio-6-designify-removebg-preview.png" class="avatar-image avatar-image-large img-fluid" alt="">
+                                    <img src="images/am1.jpg" class="avatar-image avatar-image-large img-fluid" alt="">
 
                                     <h1 class="hero-title ms-3 mb-0">Hello, <br> I'm Astrit Muçiqi, <br> Web Developer.</h1>
                                 </div>
@@ -202,20 +202,25 @@ https://templatemo.com/tm-578-first-portfolio
                                 <div class="section-title-wrap d-flex justify-content-end align-items-center mb-4">
                                     <h2 class="text-white me-4 mb-0">My Story</h2>
 
-                                    <img style="background-color: white;" src="images/am1.png" class="avatar-image img-fluid" alt="">
+                                    <img style="background-color: white; object-fit: cover;" src="images/photostudio-6-designify-removebg-preview.png" class="avatar-image img-fluid" alt="">
                                 </div>
 
                                 <h3 class="pt-2 mb-3">a little bit about my career</h3>
 
-                                <p class="p_responsive" style="text-align: justify;">I had an impressive journey in computer science and web programming! Over the four years on this field, with exceptional dedication I achieved remarkable success in this field.
-                                    During the academic journey, consistently excelled in exams, showcase to my strong understanding of the theoretical and practical aspects of the field.
-                                    <br> I have experinece on developing games too, I have some games developed in game jams where has been a thrilling journey, filled with fast-paced creativity, collaboration, and the rush of bringing ideas to life within tight timeframes. Being on this game jams, I've embraced the challenge of delivering outstanding games, honing my skills in teamwork, perseverance, and innovation.
-                                    <br> After completing studies, I joined Primex LLC Company as a Web Developer, where I put my knowledge and skills into practice.
-                                    <br> Due to consistent hard work and commitment, I were recently promoted to the position of Team Leader of the development team.
-                                    <br> This role involves guiding and mentoring teammates, helping them enhance their skills and achieve their goals providing clear instructions, setting goals, and motivating team members to deliver their best work.
-                                    <br>  This promotion reflects my exceptional leadership qualities, my ability to effectively communicate and collaborate with my colleagues, and my exemplary technical skills.     
-                                    <br> Strong problem-solving abilities and attention to detail have played a crucial role in the successful delivery of complex web development projects                           
-                                </p>
+                                <ul class="p_responsive" style="text-align: justify;">
+                                    <li>Five-year journey in web programming</li>
+                                    <li>Consistently excelled academically</li>
+                                    <li>Game development in game jams</li>
+                                    <li>Joined Primex LLC as Full-Stack Web Developer</li>
+                                    <li>Promoted to Team Leader</li>
+                                    <li>Guide and mentor teammates</li>
+                                    <li>Strong leadership and communication</li>
+                                    <li>Attention to detail</li>
+                                    <li>Worked with ERP and CRM systems</li>
+                                    <li>Adapted to client technology needs</li>
+                                    <li>Currently working at Trokit Technologies as Software Developer</li>
+                                    <li>Specialized in PHP, Laravel, Livewire, JavaScript, Angular, React, React Native, Vue...</li>
+                                </ul>
 
                             </div>
                         </div>
@@ -262,25 +267,25 @@ https://templatemo.com/tm-578-first-portfolio
                             <div class="about-thumb">
                                 <div class="row">
                                     <div class="col-lg-6 col-6 featured-border-bottom py-2">
-                                        <strong class="featured-numbers">4+</strong>
+                                        <strong class="featured-numbers">5+</strong>
 
                                         <p class="featured-text">Years of Experiences</p>
                                     </div>
 
                                     <div class="col-lg-6 col-6 featured-border-start featured-border-bottom ps-5 py-2">
-                                        <strong class="featured-numbers">10+</strong>
+                                        <strong class="featured-numbers">20+</strong>
 
                                         <p class="featured-text">Skills</p>
                                     </div>
 
                                     <div class="col-lg-6 col-6 pt-4">
-                                        <strong class="featured-numbers">20+</strong>
+                                        <strong class="featured-numbers">30+</strong>
 
                                         <p class="featured-text">Project Finished</p>
                                     </div>
 
                                     <div class="col-lg-6 col-6 featured-border-start ps-5 pt-4">
-                                        <strong class="featured-numbers">10+</strong>
+                                        <strong class="featured-numbers">15+</strong>
 
                                         <p class="featured-text">Programing Languages / Technologies</p>
                                     </div>
@@ -419,6 +424,7 @@ https://templatemo.com/tm-578-first-portfolio
                                 <div class="year_span">
                                     <h4>2019</h4>
                                     <h4>2022</h4>
+                                    <h4 class="h4-1">2024</h4>
                                 </div>
                                 <div style="text-align: justify;" class="p-ex">
                                     <p>
@@ -470,6 +476,16 @@ https://templatemo.com/tm-578-first-portfolio
                                                 I coordinated efforts between different teams and departments to ensure smooth project execution.</li>
                                             <li><b> Exposure:</b> Working at Primex LLC provided valuable exposure to the complexities of an international company in the furniture industry. 
                                                 I gained insights into supply chain management, customer relations, and the overall operations of a global business.</li>
+                                        </ol>
+                                    </p>
+                                    <p>
+                                        I left Primex LLC at the beginning of 2024 to join Trokit Technologies, seizing a greater opportunity with a great company and staff. At Trokit, I work with Laravel, Livewire, Angular, React, React Native, and various CRM systems to meet client requests. We have built systems for managing real-time leads from social apps, websites, and other platforms to our CRM systems for different clients. Additionally, I work on other projects such as an Insurance Calculation app and Blog management apps (CMS).
+                                        <ol>
+                                            <li><b>Responsibilities:</b> Developing and maintaining applications using Laravel, Livewire, Angular, React, and React Native. Managing CRM systems for client requests and building real-time lead management systems.</li>
+                                            <li><b>Projects:</b> Worked on diverse projects including CRM systems for Call Centers and Sales Agencies, an Insurance Calculation app, Blog management apps (CMS), and a system for lead synchronization between social media, websites, and other platforms to CRM systems.</li>
+                                            <li><b>Team Collaboration:</b> Collaborate with team members to ensure seamless integration of new features and functionalities, contributing to the overall success of various projects.</li>
+                                            <li><b>Client Engagement:</b> Engage with clients to understand their requirements and provide tailored solutions that meet their business needs.</li>
+                                            <li><b>Technical Expertise:</b> Utilize my technical expertise to solve complex problems and ensure the delivery of high-quality, efficient solutions.</li>
                                         </ol>
                                     </p>
                                 </div>
@@ -655,7 +671,7 @@ https://templatemo.com/tm-578-first-portfolio
                     <div class="col-lg-12 col-12">
                         <div class="copyright-text-wrap">
                             <p class="mb-0">
-                                <span class="copyright-text">Copyright © 2023 <a href="#">AM-PORTFOLIO</a>. All rights reserved.</span>
+                                <span class="copyright-text">Copyright © 2024 <a href="#">AM-PORTFOLIO</a>. All rights reserved.</span>
                             </p>
                         </div>
                     </div>
