--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ https://templatemo.com/tm-578-first-portfolio
                                 <div class="section-title-wrap d-flex justify-content-end align-items-center mb-4">
                                     <h2 class="text-white me-4 mb-0">My Story</h2>
 
-                                    <img style="background-color: white; object-fit: cover;" src="images/photostudio-6-designify-removebg-preview.png" class="avatar-image img-fluid" alt="">
+                                    <img style="background-color: white; object-fit: cover;" src="images/IMG_20240822_235435_470.jpg" class="avatar-image img-fluid" alt="">
                                 </div>
 
                                 <h3 class="pt-2 mb-3">a little bit about my career</h3>
