--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ https://templatemo.com/tm-578-first-portfolio
                         <div class="col-lg-7 col-12">
                             <div class="hero-text">
                                 <div class="hero-title-wrap d-flex align-items-center mb-4">
-                                    <img src="images/IMG_20240626_213138_094.jpg" class="avatar-image avatar-image-large img-fluid" alt="">
+                                    <img src="images/Photoroom-20240829_224346.png" class="avatar-image avatar-image-large img-fluid" alt="">
 
                                     <h1 class="hero-title ms-3 mb-0">Hello, <br> I'm Astrit Muçiqi, <br> Web Developer.</h1>
                                 </div>
