--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@ https://templatemo.com/tm-578-first-portfolio
             </section>
             
             <section class="contact section-padding" id="section_4">
-                <div class="container">
+                <div class="container" style="background-color: white; border-radius: 5%;padding: 10px;">
                     <div class="row">
                         <div class="col-lg-6 col-md-8 col-12">
                             <div class="section-title-wrap d-flex justify-content-center align-items-center mb-5">
